packages/coln-compiler/test/hlevel.output
-- elaborated
global entry named Family
type: Theory
value: sig
  person : Set
  is-parent : person -> person -> Prop
  happy : Prop
end
global entry named Q
type: (F : Family) -> Theory
value: F => sig
  son : F.person
  father : F.person
end
global entry named HP
type: Theory
value: sig
  person : Set
  voldemort : person
  tomriddle : person
  reveal : voldemort = tomriddle
end
global entry named Unit
type: Prop
value: sig
end
global entry named P
type: Theory
value: sig
  u : Unit
end

-- messages

debug[D0315]: value happy has type Prop
7 |   showtype happy
7 |            ^^^^^

debug[D0315]: type happy has level Level {mlevel = Set, hlevel = HProp}
8 |   showlevel happy
8 |             ^^^^^

debug[D0315]: value is-parent has type person -> person -> Prop
9 |   showtype is-parent
9 |            ^^^^^^^^^

debug[D0315]: value happy -> person has type Theory
10 |   showtype happy -> person
10 |            ^^^^^^^^^^^^^^^

debug[D0315]: value person -> happy has type PropTheory
11 |   showtype person -> happy
11 |            ^^^^^^^^^^^^^^^

debug[D0315]: value F.is-parent has type F.person -> F.person -> Prop
18 |   showtype F.is-parent
18 |            ^^^^^^^^^^^

debug[D0315]: value F.is-parent father son has type Prop
19 |   showtype F.is-parent father son
19 |            ^^^^^^^^^^^^^^^^^^^^^^

debug[D0315]: type voldemort = tomriddle has level Level {mlevel = Set, hlevel = HProp}
29 |   showlevel voldemort = tomriddle
29 |             ^^^^^^^^^^^^^^^^^^^^^

debug[D0315]: value reveal has type voldemort = tomriddle
33 |   showtype reveal
33 |            ^^^^^^

debug[D0315]: type reveal = reveal has level Level {mlevel = Set, hlevel = HUnit}
34 |   showlevel (reveal = reveal)
34 |              ^^^^^^^^^^^^^^^

debug[D0315]: value Unit has type Prop
41 |   showtype Unit
41 |            ^^^^

debug[D0315]: type Unit has level Level {mlevel = Set, hlevel = HProp}
42 |   showlevel Unit
42 |             ^^^^

debug[D0315]: value u = u has type Prop
45 |   showtype u = u
45 |            ^^^^^

debug[D0315]: type u = u has level Level {mlevel = Set, hlevel = HUnit}
46 |   showlevel u = u
46 |             ^^^^^

error[E0307]: type sig
  f : A -> P
  a : A
end too large for universe Set
49 | def LevelJoinRecordIsNotSet (A : Set) (P : Prop) : Set := sig
49 |                                                           ^^^
50 |   f : A -> P
50 | ^^^^^^^^^^^^
51 |   a : A
51 | ^^^^^^^
52 | end
52 | ^^^
